--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "https://miguesc2.github.io/platziVideo",
   "name": "platzivideo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b feature/router-redux -d dist",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --open --mode development"
@@ -34,6 +37,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.6.0",
     "file-loader": "^4.3.0",
+    "gh-pages": "^3.2.3",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
