--- a/package.json
+++ b/package.json
@@ -15,15 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-eslint": "^10.0.2",
-    "classnames": "^2.3.1",
-    "eslint": "^6.0.1",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.2",
-    "md5": "^2.3.0",
-    "prop-types": "^15.7.2",
+    "mini-css-extract-plugin": "^2.6.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.2.4",
@@ -31,20 +23,29 @@
     "redux": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/preset-env": "^7.5.4",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.6.0",
-    "file-loader": "^4.3.0",
-    "gh-pages": "^3.2.3",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.7.0",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^7.3.1",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2"
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.5",
+    "classnames": "^2.3.1",
+    "css-loader": "^6.7.1",
+    "eslint": "^8.18.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
+    "eslint-plugin-react": "^7.30.1",
+    "file-loader": "^6.2.0",
+    "gh-pages": "^4.0.0",
+    "html-loader": "^3.1.2",
+    "html-webpack-plugin": "^5.5.0",
+    "md5": "^2.3.0",
+    "node-sass": "^7.0.1",
+    "prop-types": "^15.8.1",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.1",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2"
   }
 }
